--- a/client/src/Components/Contact/contact.scss
+++ b/client/src/Components/Contact/contact.scss
@@ -6,7 +6,7 @@
   display: flex;
   padding: 2em 0em;
   text-align: left;
-  color: #c9d1d9;
+  color: #a1a6ab;
   background-image: linear-gradient(to bottom right, #121212, #3d4a5d);
 
   .title {
