--- a/client/src/Components/Experience/style.scss
+++ b/client/src/Components/Experience/style.scss
@@ -2,6 +2,7 @@
 
 .experience {
   width: 100%;
+  padding: 30px 0;
   min-height: 100vh;
   display: flex;
   align-items: center;
@@ -16,5 +17,13 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 1rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .experience {
+    .content {
+      grid-template-columns: 1fr;
+    }
   }
 }
